changed color values and fixed gap in cards

--- a/src/page/Home.css
+++ b/src/page/Home.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     min-height: 100vh;
     width: 100vw;
-    color: white;
+    color: #ffffff;
     object-fit: contain;
     background-position: center;
     background-repeat:no-repeat;
@@ -16,17 +16,18 @@
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
+ gap: 8em;
 }
 
 .individual-value{
     width: 250px;
     min-height: 300px;
-    background-color: black;
-    border: 2px solid grey;
+    background-color: #000000;
+    border: 2px solid #808080;
     padding: 10px;
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
-    gap: 30px;
     border-radius: 10px;
 }
 
